--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "description": "flip vido",
+  "description": "flips videos horizontally",
   "manifest_version": 2,
-  "name": "video-flip",
+  "name": "web-video-flip",
   "version": "1.0",
   "icons": {
     "48": "icons/flipicon.png"
